added start button to start the game

--- a/client/public/index.html
+++ b/client/public/index.html
@@ -6,6 +6,8 @@
     <meta name="theme-color" content="#000000">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
     <link href="https://fonts.googleapis.com/css?family=Nanum+Myeongjo" rel="stylesheet">
+    <meta name="google-signin-client_id" content="195732986189-m63nd70puejk3soosqi7dvluvn4fm08a.apps.googleusercontent.com">
+    <script src="https://apis.google.com/js/platform.js" async defer></script>
     <link rel="stylesheet" href="%PUBLIC_URL%/css/Font.css">
     <link rel="stylesheet" href="%PUBLIC_URL%/css/App.css">
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json">
