--- a/client/public/index.html
+++ b/client/public/index.html
@@ -8,8 +8,8 @@
     <link href="https://fonts.googleapis.com/css?family=Nanum+Myeongjo" rel="stylesheet">
     <meta name="google-signin-client_id" content="195732986189-m63nd70puejk3soosqi7dvluvn4fm08a.apps.googleusercontent.com">
     <script src="https://apis.google.com/js/platform.js" async defer></script>
-    <link rel="stylesheet" type="text/html" href="%PUBLIC_URL%/css/Font.css">
-    <link rel="stylesheet" type="text/html" href="%PUBLIC_URL%/css/App.css">
+    <!-- <link rel="stylesheet" href="%PUBLIC_URL%/css/Font.css">
+    <link rel="stylesheet" href="%PUBLIC_URL%/css/App.css"> -->
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json">
     <!-- favicon -->
     <link rel="apple-touch-icon" sizes="57x57" href="./img/favicon/apple-icon-57x57.png">
