--- a/README.html
+++ b/README.html
@@ -9,15 +9,15 @@
 <p>Created by: Bala Naga Sireesha Nekkanti, Jill Jurgens, Jenn Bono, and Sarah Ellis</p>
 <p>Heroku Link: <a href="https://quizard-of-ahhhs.herokuapp.com">https://quizard-of-ahhhs.herokuapp.com</a></p>
 <p>Technologies Used:
-React
-Passport
-Sass
-Axios
-React-Router-DOM
-Google Login
-MongoDB
-Mongoose
-React-Player
+React,
+Passport,
+Sass,
+Axios,
+React-Router-DOM,
+Google Login,
+MongoDB,
+Mongoose,
+React-Player,
 Material-UI</p>
 
       </body>
